# dotfiles

./: .airmux.yml  .bash_profile  .bashrc  .gitconfig  .gitignore_global  .gitmodules  .indentconfig.yaml  .indentconfig_actual.yaml  .inputrc  .sqliterc  .taskrc  .tmux.conf  .xinitrc  .xonshrc  .xscreensaver  README.md  a.moving_to_new_config_with_claude_code.txt  rgignore  setup.sh  test.lua
.bash_completion.d/: himalaya  tmux
.cargo/: config.toml
.claude/: settings.local.json
.config/: starship.toml
.config/alacritty/: alacritty.toml  alacritty.yml
.config/bash_prompt/: config.toml
.config/ghostty/: config
.config/git/: ignore
.config/goneovim/: setting.toml
.config/i3/: config  i3_config
.config/i3blocks/: config
.config/i3status-rust/: config.toml
.config/jj/: config.toml
.config/litecli/: config
.config/nvim/: hi.ts  init.lua  init.vim  pager.init.lua  pager.init.vim
.config/pgcli/: config
.config/picom/: picom.conf
.config/ptpython/: config.py
.config/qutebrowser/: autoconfig.yml  config.py
.config/skhd/: skhdrc
.config/spacebar/: spacerrc
.config/sql-language-server/: .sqllsrc.json
.config/tmux/: theme.conf
.cursor/: argv.json  mcp.json
.ssh/: config
bash_prompt/: Cargo.toml
bash_prompt/src/: consts.rs  main.rs
bash_prompt/src/conf/: mod.rs
bash_prompt/src/prompt_parts/: current_dir.rs  git_branch.rs  mod.rs  truncate.rs
bash_prompt/src/prompt_parts/tmux/: mod.rs  tmux_comm.rs
conf/: bashrc  gitignore  i3_config  init.vim  mypy_config  setup.sh  tmux.conf  vimrc
setupdotfiles/: setup.py
(+293 files in other folders)
