[package]
name = "bash_prompt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
git2 = "0.19.0"
itertools = "0.13.0"
once_cell = "1.19.0"
pathdiff = "0.2.2"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
toml = "0.8.19"
